[package]
name = "browserinfo"
version = "0.1.4"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = """
browser and hardware information.
"""
keywords = ["webapp", "javascript", "desktop", "android"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/broinfo"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ua-parser = "0.2"

[dev-dependencies]
# for doc test
dioxus-document = "0.7"

[features]
default = []

[lib]
name = "browserinfo"
path = "src/lib.rs"
